--- a/src/Frontend/CorresponsaliaBundle/Resources/config/routing.yml
+++ b/src/Frontend/CorresponsaliaBundle/Resources/config/routing.yml
@@ -290,3 +290,131 @@ cobertura_delete:
     pattern:  /cobertura/{id}/delete
     defaults: { _controller: "CorresponsaliaBundle:Cobertura:delete" }
     requirements: { _method: post|delete }
+
+
+#######################################################################################################################
+#
+#                                       RUTAS CONSULTORIA JURIDICA
+#
+#######################################################################################################################
+
+#PERSONAL
+personal:
+    pattern:  /personal
+    defaults: { _controller: "CorresponsaliaBundle:Personal:index" }
+
+personal_show:
+    pattern:  /personal/{id}/show
+    defaults: { _controller: "CorresponsaliaBundle:Personal:show" }
+
+personal_new:
+    pattern:  /personal/new
+    defaults: { _controller: "CorresponsaliaBundle:Personal:new" }
+
+personal_create:
+    pattern:  /personal/create
+    defaults: { _controller: "CorresponsaliaBundle:Personal:create" }
+    requirements: { _method: post }
+
+personal_edit:
+    pattern:  /personal/{id}/edit
+    defaults: { _controller: "CorresponsaliaBundle:Personal:edit" }
+
+personal_update:
+    pattern:  /personal/{id}/update
+    defaults: { _controller: "CorresponsaliaBundle:Personal:update" }
+    requirements: { _method: post|put }
+
+personal_delete:
+    pattern:  /personal/{id}/delete
+    defaults: { _controller: "CorresponsaliaBundle:Personal:delete" }
+    requirements: { _method: post|delete }
+
+reporteconsultoria:
+    pattern: /consultoria/reportes
+    defaults: { _controller: "CorresponsaliaBundle:Personal:reporte"}
+
+reportepersonal:
+    pattern: /personal/reporte
+    defaults: { _controller: "CorresponsaliaBundle:Personal:generareporte"}
+
+#CARGO
+cargo:
+    pattern:  /cargo
+    defaults: { _controller: "CorresponsaliaBundle:Cargo:index" }
+
+cargo_show:
+    pattern:  /cargo/{id}/show
+    defaults: { _controller: "CorresponsaliaBundle:Cargo:show" }
+
+cargo_new:
+    pattern:  /cargo/new
+    defaults: { _controller: "CorresponsaliaBundle:Cargo:new" }
+
+cargo_create:
+    pattern:  /cargo/create
+    defaults: { _controller: "CorresponsaliaBundle:Cargo:create" }
+    requirements: { _method: post }
+
+cargo_edit:
+    pattern:  /cargo/{id}/edit
+    defaults: { _controller: "CorresponsaliaBundle:Cargo:edit" }
+
+cargo_update:
+    pattern:  /cargo/{id}/update
+    defaults: { _controller: "CorresponsaliaBundle:Cargo:update" }
+    requirements: { _method: post|put }
+
+cargo_delete:
+    pattern:  /cargo/{id}/delete
+    defaults: { _controller: "CorresponsaliaBundle:Cargo:delete" }
+    requirements: { _method: post|delete }
+
+#REPRESENTANTE
+representante:
+    pattern:  /representante
+    defaults: { _controller: "CorresponsaliaBundle:Representante:index" }
+
+representante_show:
+    pattern:  /representante/{id}/show
+    defaults: { _controller: "CorresponsaliaBundle:Representante:show" }
+
+representante_new:
+    pattern:  /representante/new
+    defaults: { _controller: "CorresponsaliaBundle:Representante:new" }
+
+representante_create:
+    pattern:  /representante/create
+    defaults: { _controller: "CorresponsaliaBundle:Representante:create" }
+    requirements: { _method: post }
+
+representante_edit:
+    pattern:  /representante/{id}/edit
+    defaults: { _controller: "CorresponsaliaBundle:Representante:edit" }
+
+representante_update:
+    pattern:  /representante/{id}/update
+    defaults: { _controller: "CorresponsaliaBundle:Representante:update" }
+    requirements: { _method: post|put }
+
+representante_delete:
+    pattern:  /representante/{id}/delete
+    defaults: { _controller: "CorresponsaliaBundle:Representante:delete" }
+    requirements: { _method: post|delete }
+
+#DATOS JURIDICOS
+consultoria:
+    pattern: /datoslegales
+    defaults: { _controller: "CorresponsaliaBundle:Consultoria:index"}
+
+consultoria_show:
+    pattern: /datoslegales/show/{id}
+    defaults: { _controller: "CorresponsaliaBundle:Consultoria:show"}
+    
+consultoria_edit:
+    pattern: /datoslegales/edit/{id}
+    defaults: { _controller: "CorresponsaliaBundle:Consultoria:edit"}
+consultoria_update:
+    pattern: /datoslegales/update/{id}
+    defaults: { _controller: "CorresponsaliaBundle:Consultoria:update"}
+
