--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -43,20 +43,51 @@ assetic:
 # Doctrine Configuration
 doctrine:
     dbal:
-        driver:   "%database_driver%"
-        host:     "%database_host%"
-        port:     "%database_port%"
-        dbname:   "%database_name%"
-        user:     "%database_user%"
-        password: "%database_password%"
-        charset:  UTF8
+        default_connection: default
+        connections:
+            default:
+                driver:   "%database_driver1%"
+                host:     "%database_host1%"
+                port:     "%database_port1%"
+                dbname:   "%database_name1%"
+                user:     "%database_user1%"
+                password: "%database_password1%"
+                charset:  UTF8
+            sait:
+                driver:   "%database_driver2%"
+                host:     "%database_host2%"
+                port:     "%database_port2%"
+                dbname:   "%database_name2%"
+                user:     "%database_user2%"
+                password: "%database_password2%"
+                charset:  UTF8
+
+#doctrine:
+#    dbal:
+#        driver:   "%database_driver%"
+#        host:     "%database_host%"
+#        port:     "%database_port%"
+#        dbname:   "%database_name%"
+#        user:     "%database_user%"
+#        password: "%database_password%"
+#        charset:  UTF8
         # if using pdo_sqlite as your database driver, add the path in parameters.yml
         # e.g. database_path: "%kernel.root_dir%/data/data.db3"
         # path:     "%database_path%"
-
     orm:
-        auto_generate_proxy_classes: "%kernel.debug%"
-        auto_mapping: true
+        default_entity_manager:       default
+        entity_managers:
+            default:
+                connection:           default
+                mappings:
+                    CorresponsaliaBundle:       ~
+                    UsuarioBundle:      ~
+            sait:
+                connection:           sait
+                
+    #orm:
+        #auto_generate_proxy_classes: "%kernel.debug%"
+        #auto_mapping: true
 
 # Swiftmailer Configuration
 swiftmailer:
