CRUD de entidades equipo, categoria, marca

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -9,3 +9,15 @@ usuario:
 login:
     pattern:  /
     defaults: { _controller: UsuarioBundle:Default:index }
+    
+CorresponsaliaBundle_tecnocategoria:
+        resource: "@CorresponsaliaBundle/Resources/config/routing/tecnologia_categoria.yml"
+        prefix:   /tecnocategoria
+  
+CorresponsaliaBundle_tecnomarca:
+        resource: "@CorresponsaliaBundle/Resources/config/routing/tecnologia_marca.yml"
+        prefix:   /tecnomarca
+        
+CorresponsaliaBundle_tecnoequipo:
+        resource: "@CorresponsaliaBundle/Resources/config/routing/tecnologia_equipo.yml"
+        prefix:   /tecnoequipo
