--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,10 @@
-index.file=index.php
+auxiliary.org-netbeans-modules-php-editor.fluent_2e_setter_2e_project_2e_property=false
+auxiliary.org-netbeans-modules-php-editor.getter_2e_setter_2e_method_2e_name_2e_generation=AS_JAVA
+browser.id=default
+copy.src.files=false
+copy.src.on.open=false
+copy.src.target=
+index.file=web/app_dev.php
+run.as=LOCAL
+script.arguments=/usuario/login
 url=http://localhost/corresponsalia/
