--- a/src/Frontend/CorresponsaliaBundle/Resources/config/routing/tecnologia_equipo.yml
+++ b/src/Frontend/CorresponsaliaBundle/Resources/config/routing/tecnologia_equipo.yml
@@ -28,3 +28,7 @@ tecnoequipo_delete:
     pattern:  /{id}/delete
     defaults: { _controller: "CorresponsaliaBundle:Tecnologia\Equipo:delete" }
     requirements: { _method: post|delete }
+    
+tecnoequipo_select:
+    pattern: /modelo
+    defaults: { _controller: "CorresponsaliaBundle:Tecnologia\ModeloExtra:modelo"}
