--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -4,7 +4,8 @@ browser.id=default
 copy.src.files=false
 copy.src.on.open=false
 copy.src.target=
-index.file=web/app_dev.php
+debug.path.mapping.local=web
+debug.path.mapping.remote=http://localhost/Telesur/corresponsalia/app_dev.php/usuario/login
+debug.url=DEFAULT_URL
 run.as=LOCAL
-script.arguments=/usuario/login
-url=http://localhost/corresponsalia/
+url=http://localhost/Telesur/corresponsalia/app_dev.php/
