--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -30,3 +30,6 @@ CorresponsaliaBundle_tecnomodelo:
         resource: "@CorresponsaliaBundle/Resources/config/routing/tecnologia_modelo.yml"
         prefix:   /tecnomodelo
 
+CorresponsaliaBundle_tecnobitacora:
+        resource: "@CorresponsaliaBundle/Resources/config/routing/tecnologia_bitacora.yml"
+        prefix:   /tecnobitacora
