--- a/app/config/parameters.yml
+++ b/app/config/parameters.yml
@@ -5,14 +5,14 @@ parameters:
     database_port1: null
     database_name1: corresponsalia
     database_user1: postgres
-    database_password1: postgres
+    database_password1: 123456
 
     database_driver2: pdo_pgsql
     database_host2: 127.0.0.1
     database_port2: null
     database_name2: sait
     database_user2: postgres
-    database_password2: postgres
+    database_password2: 123456
     
     mailer_transport: smtp
     mailer_host: correo.telesurtv.net
