--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -31,11 +31,10 @@ security:
     access_control:
         - { path: ^/usuario/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/corresponsalia/inicio, roles: ROLE_USER }
-    #ROLES DE CONSULTORIA
-        - { path: ^/corresponsalia/personal, roles: [ROLE_ADMIN, ROLE_PERSONAL]}
-        - { path: ^/corresponsalia/cargo, roles: [ROLE_ADMIN, ROLE_PERSONAL]}
-        - { path: ^/corresponsalia/representante, roles: [ROLE_ADMIN, ROLE_CONSULTORIA]}
-        - { path: ^/corresponsalia/datoslegales, roles: [ROLE_ADMIN,ROLE_CONSULTORIA]}
-        - { path: ^/corresponsalia/contrato, roles: [ROLE_ADMIN,ROLE_CONSULTORIA]}
-        - { path: ^/corresponsalia/consultoria, roles: [ROLE_ADMIN,ROLE_CONSULTORIA]}
-        - { path: ^/corresponsalia/personal, roles: [ROLE_ADMIN, ROLE_PERSONAL]}
+    #ROLES DE MODULO DE PERSONAL
+        - { path: ^/corresponsalia/personal,     roles: [ROLE_SUPERADMIN, ROLE_PERSONAL]}
+        - { path: ^/corresponsalia/cargo,        roles: [ROLE_SUPERADMIN, ROLE_PERSONAL]}
+    #ROLES DE MODULO DE CORRESPONSALIA (DATOS, COMENTARIOS Y DOCUMENTOS)
+        - { path: ^/corresponsalia/datoslegales, roles: [ROLE_SUPERADMIN,ROLE_CONSULTORIA]}
+        - { path: ^/corresponsalia/comentarios,  roles: [ROLE_SUPERADMIN,ROLE_CONSULTORIA]}
+        - { path: ^/corresponsalia/documentos,   roles: [ROLE_SUPERADMIN,ROLE_CONSULTORIA]}
