cambio de jefe en escel

--- a/src/Frontend/CorresponsaliaBundle/Resources/config/parameters.yml
+++ b/src/Frontend/CorresponsaliaBundle/Resources/config/parameters.yml
@@ -1,4 +1,4 @@
 parameters:
-    unidadapoyologistico: LINERO, JAVIER
+    unidadapoyologistico: BRUNO, ORLANDO
     asignaciones: ALVAREZ, CONSUELO
     dirgeneralinformacion: PARRA, WILIAM
