Fase 1: ajuste de bitacora, mejorar html

--- a/src/Frontend/CorresponsaliaBundle/Resources/config/routing/tecnologia_bitacora.yml
+++ b/src/Frontend/CorresponsaliaBundle/Resources/config/routing/tecnologia_bitacora.yml
@@ -8,3 +8,6 @@ tecnobitacora_show:
 
 
 
+diagnostico:
+    pattern: /usuario/error
+    defaults: { _controller: "CorresponsaliaBundle:Tecnologia\Diagnostico:error" }
