--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -89,3 +89,7 @@ swiftmailer:
     password:  %mailer_password%
     port:      %mailer_port%
     spool:     { type: memory }
+
+services:
+    tecnologia.prueba:
+        class:        Frontend\CorresponsaliaBundle\DependencyInjection\prueba
