--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -2,6 +2,7 @@ imports:
     - { resource: parameters.yml }
     - { resource: security.yml }
     - { resource: '@CorresponsaliaBundle/Resources/config/parameters.yml' }
+    - { resource: services.yml }
 
 framework:
     #esi:             ~
