--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -89,4 +89,4 @@ swiftmailer:
     password:  %mailer_password%
     port:      %mailer_port%
     spool:     { type: memory }
-    disable_delivery:  true
+    disable_delivery:  false
