cambios en pasaporte y documento 19082014 518pm

--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -67,4 +67,5 @@ security:
         - { path: ^/corresponsalia/datoslegales, roles: [ROLE_SUPERADMIN,ROLE_CONSULTORIA]}
         - { path: ^/corresponsalia/comentarios,  roles: [ROLE_SUPERADMIN,ROLE_CONSULTORIA]}
         - { path: ^/corresponsalia/documentos,   roles: [ROLE_SUPERADMIN,ROLE_CONSULTORIA]}
+        - { path: ^/corresponsalia/documento/edit, roles: ROLE_SUPERADMIN}
 
